Add social media meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="On Air Dialogues: Listening to rural people."
     />
+
+    <meta content="https://dialogues.farmradio.org/static/media/photo2.a2d14f42.jpg" property="og:image" />
+    <meta content="On Air Dialogues: Listening to rural people." property="og:title" />
+    <meta content="We asked small-scale farmers to tell us their thoughts and concerns about food systems. Nearly 3,500 people responded." property="og:description" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
